--- a/pre_processing/config.ini
+++ b/pre_processing/config.ini
@@ -120,7 +120,7 @@ gary_per_var_list = FAMNUM,
 	                 AFDCEL1-48,
 	                 SSI1970,
 	                 SSIMOS70,
-	                 SSIBASE,
+	                 SSIBASE
 gary_fam_var_list = FAMNUM, POVLEV, TREATLEV
 gary_per_pos_list = (0, 4)
 	        (4, 10)
