--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 setuptools~=50.3.1
-pandas~=0.25.3
+pandas~=1.2.5
 numpy~=1.19.1
 sqlalchemy~=1.3.20
 matplotlib~=3.2.2
 sphinx
 psycopg2
+psycopg~=3.0.9
